cmake_minimum_required(VERSION 3.9)
project(Practice)
set(CMAKE_CXX_STANDARD 11)

#add_executable(Practice ActivitySelectionProblem.cpp)
#add_executable(Practice EgyptianFraction.cpp)
#add_executable(Practice BinarySearch.cpp)
#add_executable(Practice Greedy/Huffman_coding.cpp)
#add_executable(Practice TwoNTile.cpp)
#add_executable(Practice youngji.cpp)
#add_executable(Practice DP1/10844_NumOfStairsEasy.cpp)
#add_executable(Practice test.cpp)
add_executable(Practice Test.cpp)
add_library(test.txt)